--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   cloud_firestore: ^4.13.5
   firebase_auth: ^4.15.0
   awesome_dialog: ^3.1.0
+  shared_preferences: ^2.2.2
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   modal_progress_hud_nsn: ^0.4.0
